\name{ChIPQCNews}
\title{ChIPQC News}
\encoding{UTF-8}

\section{Version 1.9.2}{
 \itemize{
  \item{Dependancy cleanup; update handling of how control samples are added}
  }
}

\section{Version 1.7.2}{
 \itemize{
  \item{Convert data objects for DiffBind compatibility}
  }
}

\section{Version 1.7.1}{
 \itemize{
  \item{Maintain compatibility with changes in DiffBind}
  }
}

\section{Version 1.1.2}{
 \itemize{
  \item{Big fixes/man page fixes}
  }
}

\section{Version 1.0.1}{
 \itemize{
  \item{Changed defaults: annotation, facetBy}
  \item{Bugfixes handling sample lists without peaks}
  }
}

\section{Version 1.0.0}{
 \itemize{
  \item{Initial release.}
  }
}